# Primeiro_CRUD_BackFront

./: .env_example  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  routes.py  schemas.py
frontend/: Dockerfile  app.py
frontend/.streamlit/: config.toml
