[tool.poetry]
name = "primeiro-crud-backfront"
version = "0.1.0"
description = ""
authors = ["PauloHBSF <paulohbsfilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
pydantic = "^2.9.1"
fastapi = "^0.114.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
